# csleeeee-repo

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: django.yml
config/: custom_middleware.py  settings.py  urls.py
config/exceptions/: exception.py
prography/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
prography/migrations/: 0001_initial.py  0002_humanmodel_likes.py  0003_rename_humanmodel_human.py
prography/templates/prography/: base.html  human_list.html
