[tool.poetry]
name = "csleeeee-repo"
version = "0.1.0"
description = ""
authors = ["2044smile <2044smile@naver.com>"]
readme = "README.md"
packages = [{include = "csleeeee_repo"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
